# flask-crud

./: .flake8  README.md  config.py  docker-compose.yml  jogoteca.py  models.py  prepara_banco.py  pyproject.toml  views.py
templates/: editar.html  lista.html
